@@ -7,7 +7,7 @@
 ## http://search.cpan.org/~akaplan/Devel-NYTProf
 ##
 ##########################################################
-# $Id: nytprofhtml 1310 2010-06-17 14:51:01Z tim.bunce@gmail.com $
+# $Id: nytprofhtml 1316 2010-06-19 18:56:26Z tim.bunce@gmail.com $
 ###########################################################
 use warnings;
 use strict;
@@ -43,7 +43,7 @@ use Devel::NYTProf::Constants qw(NYTP_SCi_CALLING_SUB);
 my $json_any = eval { require JSON::Any; JSON::Any->import; JSON::Any->new }
     or warn "Can't load JSON::Any module - HTML visualizations skipped.\n";
 
-our $VERSION = '4.02';
+our $VERSION = '4.03';
 
 if ($VERSION != $Devel::NYTProf::Core::VERSION) {
     die "$0 version '$VERSION' doesn't match version '$Devel::NYTProf::Core::VERSION' of $INC{'Devel/NYTProf/Core.pm'}\n";
@@ -320,12 +320,16 @@ sub subroutine_table {
             my $is_opcode = ($pkg eq 'CORE' or $subr =~ /^CORE:/);
             unshift @hints, ($is_opcode) ? 'opcode' : 'xsub';
         }
+        if (my $recdepth = $sub->recur_max_depth) {
+            unshift @hints, sprintf "recurses: max depth %d, inclusive time %s",
+                $recdepth, fmt_time($sub->recur_incl_time);
+        }
 
         $sub_links .= sprintf qq{%*s<a %s>%s</a>%s</span></td>},
             $max_pkg_name_len+2, $pkg,
             $reporter->href_for_sub($subname),
             $subr,
-            (@hints) ? "&nbsp;(".join(", ",@hints).")" : "";
+            (@hints) ? "&nbsp;(".join("; ",@hints).")" : "";
 
         $sub_links .= "</tr>\n";
     }
