@@ -2,7 +2,7 @@
 
 Changes - List of significant changes to Devel::NYTProf
 
-(As of $Date: 2010-06-17 15:51:01 +0100 (Thu, 17 Jun 2010) $ $Revision: 1310 $)
+(As of $Date: 2010-06-19 19:56:26 +0100 (Sat, 19 Jun 2010) $ $Revision: 1316 $)
 
 =cut
 
@@ -11,6 +11,13 @@ TODO soonish
 subroutine profiler docs need update
 add u key to treemap to trigger moving 'up' a level
 add "calls N subs" to treemap mouseover box
+
+=head2 Changes in Devel::NYTProf 4.03 (svn 1316) 19th June 2010
+
+  Fixed another nytprofhtml performance problem for profiles with
+    many files/evals. Much faster merging of evals now.
+
+  For subs that recurse, show max depth and time in subroutine table.
 
 =head2 Changes in Devel::NYTProf 4.02 (svn 1309) 17th June 2010
 
